--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
+    "eas": "^0.1.0",
     "expo": "~47.0.12",
     "expo-camera": "~13.1.0",
     "expo-checkbox": "~2.2.2",
