--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "hefesto",
   "version": "0.0.1",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,7 +15,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "eas": "^0.1.0",
-    "expo": "~47.0.12",
+    "expo": "~47.0.14",
     "expo-camera": "~13.1.0",
     "expo-checkbox": "~2.2.2",
     "expo-constants": "~14.0.2",
@@ -27,14 +26,16 @@
     "onesignal-expo-plugin": "^1.3.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-onesignal": "^4.5.1",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.9",
     "react-query": "^3.39.3",
-    "zustand": "^4.3.9"
+    "zustand": "^4.3.9",
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
