--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-web": "~0.18.9",
     "react-query": "^3.39.3",
     "zustand": "^4.3.9",
-    "expo-splash-screen": "~0.17.5"
+    "expo-splash-screen": "~0.17.5",
+    "expo-barcode-scanner": "~12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
