--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "dayjs": "^1.11.7",
     "eas": "^0.1.0",
     "expo": "~47.0.14",
+    "expo-barcode-scanner": "~12.1.0",
     "expo-camera": "~13.1.0",
     "expo-checkbox": "~2.2.2",
     "expo-constants": "~14.0.2",
     "expo-font": "~11.0.1",
     "expo-linear-gradient": "~12.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "onesignal-expo-plugin": "^1.3.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-barcode-mask": "^1.2.4",
     "react-native-onesignal": "^4.5.1",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.4.1",
@@ -34,9 +37,7 @@
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.18.9",
     "react-query": "^3.39.3",
-    "zustand": "^4.3.9",
-    "expo-splash-screen": "~0.17.5",
-    "expo-barcode-scanner": "~12.1.0"
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
