--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.8",
     "react-native-barcode-mask": "^1.2.4",
+    "react-native-masked-text": "^1.13.0",
     "react-native-onesignal": "^4.5.1",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "4.4.1",
